# docs/swagger.json
@@ -1,22 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
-        "title": "Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/api/v1",
     "paths": {
         "/albums": {
             "get": {
@@ -31,6 +17,15 @@
                     "albums"
                 ],
                 "summary": "List Albums",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "string",
+                        "description": "name search by title",
+                        "name": "title",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -106,7 +101,7 @@
                 "tags": [
                     "album"
                 ],
-                "summary": "Get an account",
+                "summary": "Get an album",
                 "parameters": [
                     {
                         "type": "integer",
@@ -136,7 +131,7 @@
                 "tags": [
                     "album"
                 ],
-                "summary": "Delete an account",
+                "summary": "Delete an album",
                 "parameters": [
                     {
                         "type": "integer",
@@ -166,7 +161,7 @@
                 "tags": [
                     "album"
                 ],
-                "summary": "Update an account",
+                "summary": "Update an album",
                 "parameters": [
                     {
                         "type": "integer",
@@ -205,14 +200,5 @@
                 }
             }
         }
-    },
-    "securityDefinitions": {
-        "None": {
-            "type": "basic"
-        }
-    },
-    "externalDocs": {
-        "description": "OpenAPI",
-        "url": "https://swagger.io/resources/open-api/"
     }
 }
